Medium Test cases commit

--- a/final-framework-testng/test-output/old/Default suite/classes.html
+++ b/final-framework-testng/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.elearning.functional.UnSubscribe</td>
+<td>com.elearning.functional.TC35ReportSendTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createUnsubscribeTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validLoginTest</td>
+<td>ReportCorrectTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
