--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>19/01/25 10:54:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UnSubscribe.createUnsubscribeTest()[pri:2, instance:com.elearning.functional.UnSubscribe@42d80b78]">createUnsubscribeTest</td> 
+<tr bgcolor="afa0ac">  <td>19/01/29 18:11:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC35ReportSendTest.ReportCorrectTest()[pri:1, instance:com.elearning.functional.TC35ReportSendTest@42d80b78]">ReportCorrectTest</td> 
   <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/25 10:54:29</td>   <td>-13679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UnSubscribe.setUp()[pri:0, instance:com.elearning.functional.UnSubscribe@42d80b78]">setUp</td> 
+<tr bgcolor="afa0ac">  <td>19/01/29 18:11:00</td>   <td>-10324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC35ReportSendTest.setUp()[pri:0, instance:com.elearning.functional.TC35ReportSendTest@42d80b78]">setUp</td> 
   <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/25 10:54:29</td>   <td>-13700</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UnSubscribe.setUpBeforeClass()[pri:0, instance:com.elearning.functional.UnSubscribe@42d80b78]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="afa0ac">  <td>19/01/29 18:11:00</td>   <td>-10341</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC35ReportSendTest.setUpBeforeClass()[pri:0, instance:com.elearning.functional.TC35ReportSendTest@42d80b78]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/25 10:54:53</td>   <td>9741</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UnSubscribe.tearDown()[pri:0, instance:com.elearning.functional.UnSubscribe@42d80b78]">&lt;&lt;tearDown</td> 
+<tr bgcolor="afa0ac">  <td>19/01/29 18:12:01</td>   <td>50327</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC35ReportSendTest.tearDown()[pri:0, instance:com.elearning.functional.TC35ReportSendTest@42d80b78]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/25 10:54:39</td>   <td>-4169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UnSubscribe.validLoginTest()[pri:1, instance:com.elearning.functional.UnSubscribe@42d80b78]">validLoginTest</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
 </table>
