--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>19/01/30 16:33:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC38CreateGroupTest.setUpBeforeClass()[pri:0, instance:com.elearning.functional.TC38CreateGroupTest@42d80b78]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/30 16:33:17</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC38CreateGroupTest.setUp()[pri:0, instance:com.elearning.functional.TC38CreateGroupTest@42d80b78]">setUp</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/30 16:33:27</td>   <td>10500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC38CreateGroupTest.CreateGroupTest()[pri:1, instance:com.elearning.functional.TC38CreateGroupTest@42d80b78]">CreateGroupTest</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/30 16:33:48</td>   <td>31465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC38CreateGroupTest.CreateNewGroupTest()[pri:2, instance:com.elearning.functional.TC38CreateGroupTest@42d80b78]">CreateNewGroupTest</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/30 16:33:52</td>   <td>35285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC38CreateGroupTest.SelectGroupmemberTest()[pri:3, instance:com.elearning.functional.TC38CreateGroupTest@42d80b78]">SelectGroupmemberTest</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/30 16:33:57</td>   <td>40279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC38CreateGroupTest.EditGroupTest()[pri:4, instance:com.elearning.functional.TC38CreateGroupTest@42d80b78]">EditGroupTest</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/01/30 16:34:04</td>   <td>47250</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC38CreateGroupTest.tearDown()[pri:0, instance:com.elearning.functional.TC38CreateGroupTest@42d80b78]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/04 18:47:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC39GenerateReportTest.setUpBeforeClass()[pri:0, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@101478235</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/04 18:47:37</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.setUp()[pri:0, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">setUp</td> 
+  <td>main@101478235</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/04 18:47:45</td>   <td>8273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.loginTest()[pri:1, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">loginTest</td> 
+  <td>main@101478235</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/04 18:47:48</td>   <td>11616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.ReporttabTest()[pri:2, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">ReporttabTest</td> 
+  <td>main@101478235</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/04 18:47:53</td>   <td>15960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.RtclkStudentTest()[pri:3, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">RtclkStudentTest</td> 
+  <td>main@101478235</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/04 18:47:54</td>   <td>17444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.RtclkDetailsTest()[pri:4, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">RtclkDetailsTest</td> 
+  <td>main@101478235</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/04 18:48:39</td>   <td>62338</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC39GenerateReportTest.tearDown()[pri:0, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@101478235</td>   <td></td> </tr>
 </table>
