medium test cases 0.4

--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>19/02/04 18:47:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.ReporttabTest()[pri:2, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">ReporttabTest</td> 
+<tr bgcolor="afa0ac">  <td>19/02/06 18:14:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC37ReviewTest.ReportCorrectTest()[pri:1, instance:com.elearning.functional.TC37ReviewTest@42d80b78]">ReportCorrectTest</td> 
   <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/04 18:47:54</td>   <td>5828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.RtclkDetailsTest()[pri:4, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">RtclkDetailsTest</td> 
+<tr bgcolor="afa0ac">  <td>19/02/06 18:14:31</td>   <td>-8551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC37ReviewTest.setUp()[pri:0, instance:com.elearning.functional.TC37ReviewTest@42d80b78]">setUp</td> 
   <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/04 18:47:53</td>   <td>4344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.RtclkStudentTest()[pri:3, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">RtclkStudentTest</td> 
-  <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/04 18:47:45</td>   <td>-3343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.loginTest()[pri:1, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">loginTest</td> 
-  <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/04 18:47:37</td>   <td>-11577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC39GenerateReportTest.setUp()[pri:0, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">setUp</td> 
-  <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/04 18:47:37</td>   <td>-11616</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC39GenerateReportTest.setUpBeforeClass()[pri:0, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="afa0ac">  <td>19/02/06 18:14:31</td>   <td>-8567</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC37ReviewTest.setUpBeforeClass()[pri:0, instance:com.elearning.functional.TC37ReviewTest@42d80b78]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/04 18:48:39</td>   <td>50722</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC39GenerateReportTest.tearDown()[pri:0, instance:com.elearning.functional.TC39GenerateReportTest@42d80b78]">&lt;&lt;tearDown</td> 
+<tr bgcolor="afa0ac">  <td>19/02/06 18:15:21</td>   <td>41548</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC37ReviewTest.tearDown()[pri:0, instance:com.elearning.functional.TC37ReviewTest@42d80b78]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@101478235</td>   <td></td> </tr>
 </table>
