--- a/final-framework-testng/test-output/old/Default suite/classes.html
+++ b/final-framework-testng/test-output/old/Default suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.elearning.functional.TC39GenerateReportTest</td>
+<td>com.elearning.functional.TC37ReviewTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>RtclkDetailsTest</td>
+<td>ReportCorrectTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>RtclkStudentTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ReporttabTest</td>
+<td>courseclk</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -32,10 +28,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>SendEmailTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
