Complex test cases ver0.3

--- a/final-framework-testng/test-output/old/Default suite/classes.html
+++ b/final-framework-testng/test-output/old/Default suite/classes.html
@@ -4,22 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.elearning.functional.TC69AddUserNegativeTest</td>
+<td>com.elearning.functional.TC66CreateTakeTestTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>addQuestionTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>createNewTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addsecondQuestionTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>studentloginTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AssertnewUsercreationTest</td>
+<td>studentTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>addNewUserTest</td>
+<td>logoutTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
