complex test cases 0.5

--- a/final-framework-testng/test-output/old/Default suite/classes.html
+++ b/final-framework-testng/test-output/old/Default suite/classes.html
@@ -11,11 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addQuestionTest</td>
+<td>studentsubscribecourseTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>createNewTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addQuestionTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>teacherlogintest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -31,11 +39,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>studentTest</td>
+<td>logoutTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>logoutTest</td>
+<td>studentlogouttest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>studenttaketestTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>teacherevaluatetest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
