--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:40:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.addQuestionTest()[pri:3, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">addQuestionTest</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:40:56</td>   <td>20591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.addsecondQuestionTest()[pri:4, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">addsecondQuestionTest</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:40:12</td>   <td>-24187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.createNewTest()[pri:2, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">createNewTest</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:40:02</td>   <td>-33818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.loginTest()[pri:1, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">loginTest</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:41:57</td>   <td>80701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.logoutTest()[pri:5, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">logoutTest</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:39:52</td>   <td>-43401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.setUp()[pri:0, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">setUp</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:39:52</td>   <td>-43433</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC66CreateTakeTestTest.setUpBeforeClass()[pri:0, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:42:03</td>   <td>87178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.studentTest()[pri:7, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">studentTest</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:41:59</td>   <td>83487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.studentloginTest()[pri:6, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">studentloginTest</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/02/14 11:42:08</td>   <td>91778</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC66CreateTakeTestTest.tearDown()[pri:0, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:31:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.addQuestionTest()[pri:3, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">addQuestionTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:31:26</td>   <td>24796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.addsecondQuestionTest()[pri:4, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">addsecondQuestionTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:30:31</td>   <td>-30046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.createNewTest()[pri:2, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">createNewTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:30:24</td>   <td>-37373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.loginTest()[pri:1, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">loginTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:32:26</td>   <td>84871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.logoutTest()[pri:5, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">logoutTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:30:14</td>   <td>-47794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.setUp()[pri:0, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">setUp</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:30:14</td>   <td>-47815</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC66CreateTakeTestTest.setUpBeforeClass()[pri:0, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:32:28</td>   <td>86898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.studentloginTest()[pri:6, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">studentloginTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:32:31</td>   <td>89410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.studentsubscribecourseTest()[pri:7, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">studentsubscribecourseTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:32:37</td>   <td>95545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC66CreateTakeTestTest.studenttaketestTest()[pri:8, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">studenttaketestTest</td> 
+  <td>main@1414521932</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/02/15 15:33:39</td>   <td>157311</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC66CreateTakeTestTest.tearDown()[pri:0, instance:com.elearning.functional.TC66CreateTakeTestTest@3bfdc050]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1414521932</td>   <td></td> </tr>
 </table>
